django/kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-processing
spec:
  rules:
    - host: image-processing.anisa.lab
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: image-processing
                port:
                  number: 80
